--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "react-google-drive-rest-api",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "a helper for service account auth and google drive restful api",
   "main": "index.js",
+  "repository" :{ 
+    "type" : "git",
+    "url" : "https://github.com/SunnySunnyOMG/react-google-drive-rest-api.git"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "base64url": "^3.0.0",
