--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.1.4",
   "description": "a helper for service account auth and google drive restful api",
   "main": "index.js",
-  "repository" :{ 
-    "type" : "git",
-    "url" : "https://github.com/SunnySunnyOMG/react-google-drive-rest-api.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SunnySunnyOMG/react-google-drive-rest-api.git"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "base64url": "^3.0.0",
+    "base64url": "^2.0.0",
     "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
@@ -18,6 +18,8 @@
     "babel-preset-stage-1": "^6.24.1"
   },
   "scripts": {
+    "compile": "babel -d lib/ src/", 
+    "prepublish": "npm run compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zhe Xu",
